==> NextGenXR/Arduino_Core_STM32/libraries/SrcWrapper/src/stm32/interrupt.cpp <==
#include "interrupt.h"
#include "lock_resource.h"
#define LL_EXTI_MODULE_ENABLED
#include "stm32yyxx_ll_exti.h"
#define NB_EXTI   (16)

void stm32_interrupt_enable(GPIO_TypeDef *port, uint16_t pin,
		callback_function_t callback, uint32_t mode) {
	GPIO_InitTypeDef GPIO_InitStruct;
	uint8_t id = get_pin_id(pin);

#ifdef STM32F1xx
  uint8_t position;
  uint32_t CRxRegOffset = 0;
  uint32_t ODRRegOffset = 0;
  volatile uint32_t *CRxRegister;
  const uint32_t ConfigMask = 0x00000008; //MODE0 == 0x0 && CNF0 == 0x2
#else
	uint32_t pull;
#endif /* STM32F1xx */

	// GPIO pin configuration
	GPIO_InitStruct.Pin = pin;
	GPIO_InitStruct.Mode = mode;

	//read the pull mode directly in the register as no function exists to get it.
	//Do it in case the user already defines the IO through the digital io
	//interface
#ifndef STM32F1xx
	pull = port->PUPDR;
#ifdef GPIO_PUPDR_PUPD0
  pull &= (GPIO_PUPDR_PUPD0 << (id * 2));
  GPIO_InitStruct.Pull = (GPIO_PUPDR_PUPD0 & (pull >> (id * 2)));
#else
	pull &= (GPIO_PUPDR_PUPDR0 << (id * 2));
	GPIO_InitStruct.Pull = (GPIO_PUPDR_PUPDR0 & (pull >> (id * 2)));
#endif /* GPIO_PUPDR_PUPD0 */
#else
  CRxRegister = (pin < GPIO_PIN_8) ? &port->CRL : &port->CRH;

  for (position = 0; position < 16; position++) {
    if (pin == (0x0001 << position)) {
      CRxRegOffset = (pin < GPIO_PIN_8) ? (position << 2) : ((position - 8) << 2);
      ODRRegOffset = position;
    }
  }

  if ((*CRxRegister & ((GPIO_CRL_MODE0 | GPIO_CRL_CNF0) << CRxRegOffset)) == (ConfigMask << CRxRegOffset)) {
    if ((port->ODR & (GPIO_ODR_ODR0 << ODRRegOffset)) == (GPIO_ODR_ODR0 << ODRRegOffset)) {
      GPIO_InitStruct.Pull = GPIO_PULLUP;
    } else {
      GPIO_InitStruct.Pull = GPIO_PULLDOWN;
    }
  } else {
    GPIO_InitStruct.Pull = GPIO_NOPULL;
  }
#endif /* STM32F1xx */

	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;

	hsem_lock(CFG_HW_GPIO_SEMID, HSEM_LOCK_DEFAULT_RETRY);

	HAL_GPIO_Init(port, &GPIO_InitStruct);

	hsem_unlock(CFG_HW_GPIO_SEMID);

	gpio_irq_conf[id].callback = callback;

	// Enable and set EXTI Interrupt
	HAL_NVIC_SetPriority(gpio_irq_conf[id].irqnb, EXTI_IRQ_PRIO,
	EXTI_IRQ_SUBPRIO);
	HAL_NVIC_EnableIRQ(gpio_irq_conf[id].irqnb);
}

void stm32_interrupt_enable(GPIO_TypeDef *port, uint16_t pin,
		void (*callback)(void), uint32_t mode) {
	std::function<void(void)> _c = callback;
	stm32_interrupt_enable(port, pin, _c, mode);

}

void stm32_interrupt_disable(GPIO_TypeDef *port, uint16_t pin) {
	UNUSED(port);
	uint8_t id = get_pin_id(pin);
	gpio_irq_conf[id].callback = NULL;

	for (int i = 0; i < NB_EXTI; i++) {
		if (gpio_irq_conf[id].irqnb
				== gpio_irq_conf[i].irqnb&& gpio_irq_conf[i].callback != NULL) {
			return;
		}
	}

	LL_EXTI_DisableIT_0_31(ll_exti_lines[id]);
	HAL_NVIC_DisableIRQ(gpio_irq_conf[id].irqnb);
}

WEAK void EXTI0_IRQHandler(void)
{
	HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_0);
}

WEAK void EXTI1_IRQHandler(void) {
	HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_1);
}

WEAK void _EXTI2_IRQHandler(void) {
	HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_2);
}

WEAK void EXTI3_IRQHandler(void)
{
  HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_3);
}

void EXTI4_IRQHandler(void) {
	HAL_GPIO_EXTI_IRQHandler(GPIO_PIN_4);
}

void EXTI9_5_IRQHandler(void) {
	uint32_t pin;
	for (pin = GPIO_PIN_5; pin <= GPIO_PIN_9; pin = pin << 1) {
		HAL_GPIO_EXTI_IRQHandler(pin);
	}
}

void EXTI15_10_IRQHandler(void) {
	uint32_t pin;
	for (pin = GPIO_PIN_10; pin <= GPIO_PIN_15; pin = pin << 1) {
		HAL_GPIO_EXTI_IRQHandler(pin);
	}
}
