==> openwch/arduino_core_ch32/cores/arduino/ch32/interrupt.cpp <==
#include "interrupt.h"
#include "ch32yyxx_exti.h"
#define NB_EXTI   (8)
#define NB_EXTI   (26)
#define NB_EXTI   (16)

void ch32_interrupt_enable(GPIO_TypeDef *port, GPIOMode_TypeDef io_mode,uint16_t pin, void (*callback)(void), EXTIMode_TypeDef it_mode, EXTITrigger_TypeDef trigger_mode)
{
    GPIO_InitTypeDef GPIO_InitStruct={0};
    EXTI_InitTypeDef EXTI_InitStruct={0};
    // RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO,ENABLE);
    uint8_t id = get_pin_id(pin);
    uint8_t gpio_port_souce=0;
    GPIO_InitStruct.GPIO_Pin  = pin;
    GPIO_InitStruct.GPIO_Mode = io_mode;
    GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(port, &GPIO_InitStruct);

    #if defined(GPIOA_BASE)
    if(port == GPIOA)  gpio_port_souce = GPIO_PortSourceGPIOA;
    #endif
    #if defined(GPIOB_BASE) 
    if(port == GPIOB)  gpio_port_souce = GPIO_PortSourceGPIOB;
    #endif
    #if defined(GPIOC_BASE)
    if(port == GPIOC)  gpio_port_souce = GPIO_PortSourceGPIOC;
    #endif
    #if defined(GPIOD_BASE)
    if(port == GPIOD)  gpio_port_souce = GPIO_PortSourceGPIOD;
    #endif
    #if defined(GPIOE_BASE)
    if(port == GPIOE)  gpio_port_souce = GPIO_PortSourceGPIOE;
    #endif
    #if defined(GPIOF_BASE)
    if(port == GPIOF)  gpio_port_souce = GPIO_PortSourceGPIOF;
    #endif
    #if defined(GPIOG_BASE)
    if(port == GPIOG)  gpio_port_souce = GPIO_PortSourceGPIOG;
    #endif
    #if defined(GPIOH_BASE)
    if(port == GPIOH)  gpio_port_souce = GPIO_PortSourceGPIOH;
    #endif

    GPIO_EXTILineConfig(gpio_port_souce, id);
    EXTI_InitStruct.EXTI_Line = exti_lines[id];
    EXTI_InitStruct.EXTI_LineCmd = ENABLE;
    EXTI_InitStruct.EXTI_Mode = it_mode;
    EXTI_InitStruct.EXTI_Trigger = trigger_mode;
    EXTI_Init(&EXTI_InitStruct);

    gpio_irq_conf[id].callback = callback;

    NVIC_SetPriority(gpio_irq_conf[id].irqnb, EXTI_IRQ_PRIO);
    NVIC_EnableIRQ(gpio_irq_conf[id].irqnb);
}

void ch32_interrupt_disable(GPIO_TypeDef *port, uint16_t pin)
{
  uint8_t id = get_pin_id(pin);
  gpio_irq_conf[id].callback = NULL;

  for (int i = 0; i < NB_EXTI; i++) {
    if (gpio_irq_conf[id].irqnb == gpio_irq_conf[i].irqnb
        && gpio_irq_conf[i].callback != NULL) {
      return;
    }
  }
  NVIC_DisableIRQ(gpio_irq_conf[id].irqnb);  
}

void EXTI0_IRQHandler(void)
{
  EXTI_ClearITPendingBit(EXTI_Line0); 
  _gpio_exti_callback(EXTI_Line0);
}

void EXTI1_IRQHandler(void)
{
   EXTI_ClearITPendingBit(EXTI_Line1); 
  _gpio_exti_callback(EXTI_Line1);
}

void EXTI2_IRQHandler(void)
{
  EXTI_ClearITPendingBit(EXTI_Line2); 
  _gpio_exti_callback(EXTI_Line2);
}

void EXTI3_IRQHandler(void)
{
  EXTI_ClearITPendingBit(EXTI_Line3); 
  _gpio_exti_callback(EXTI_Line3);
}

void EXTI4_IRQHandler(void)
{
   EXTI_ClearITPendingBit(EXTI_Line4); 
   _gpio_exti_callback(EXTI_Line4);
}

void EXTI9_5_IRQHandler(void)
{
  uint32_t pin;
  for (pin = GPIO_Pin_5; pin <= GPIO_Pin_9; pin = pin << 1) {
    EXTI_ClearITPendingBit(pin); 
    _gpio_exti_callback(pin);
  }
}

void EXTI15_10_IRQHandler(void)
{
  uint32_t pin;
  for (pin = GPIO_Pin_10; pin <= GPIO_Pin_15; pin = pin << 1) {
      EXTI_ClearITPendingBit(pin); 
    _gpio_exti_callback(pin);
  }
}
